Adds new pages and routes

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,8 +7,7 @@
   <body>
     <%- include('header'); -%>
     <div class="main">
-      <h1>Home</h1>
-      <p><%= homeStartingContent %></p>
+      <h1>Contact Us</h1>
     </div>
 
     <%- include('footer'); -%>
