Adds styles to pages

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <%- include('header'); -%>
+    <%- include('partials/header'); -%>
     <div class="main">
-      <h1>About</h1>
+      <h1>Our Story</h1>
+      <span><%= startingContent %></span>
     </div>
 
-    <%- include('footer'); -%>
+    <%- include('partials/footer'); -%>
   </body>
 </html>
