--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <%- include('header'); -%>
+    <%- include('partials/header'); -%>
     <div class="main">
-      <h1>Home</h1>
-      <p><%= homeStartingContent %></p>
+      <h1>Daily Gratitude</h1>
+      <p><i><%= startingContent %></i></p>
     </div>
 
-    <%- include('footer'); -%>
+    <%- include('partials/footer'); -%>
   </body>
 </html>
