--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,13 +13,13 @@
   </head>
   <body>
     <header
-      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom header"
     >
       <a
         href="/"
-        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"
+        class="logo d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"
       >
-        <span class="fs-4">Daily Journal</span>
+        <span class="fs-4">The Five Minute Journal</span>
       </a>
 
       <ul class="nav nav-pills">
