--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <%- include('header'); -%>
+    <%- include('partials/header'); -%>
     <div class="main">
-      <h1>Contact Us</h1>
+      <h1>Connect with Us</h1>
+      <p><%= startingContent %></p>
     </div>
 
-    <%- include('footer'); -%>
+    <%- include('partials/footer'); -%>
   </body>
 </html>
