--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
-    <footer class="py-3 my-4 footer">
+    <footer class="py-3 mt-4 footer">
       <p class="text-center text-muted">© 2021 Company, Inc</p>
     </footer>
   </body>
