Adds styles and updates posts

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Journal</title>
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <%- include('partials/header'); -%>
@@ -13,7 +13,8 @@
       <ul>
         <li>
           <h5><%= post.title %></h5>
-          <p><%= post.content %></p>
+          <span><%= post.content.substring(0,100) + "..." %></span>
+          <a href="/posts/<%= post.title %>"">Read more</a>
         </li>
       </ul>
       <% }) %>
