--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Journal</title>
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <%- include('partials/header'); -%>
