--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
         <li>
           <h5><%= post.title %></h5>
           <span><%= post.content.substring(0,100) + "..." %></span>
-          <a href="/posts/<%= post.title %>"">Read more</a>
+          <a href="/posts/<%= post._id %>"">Read more</a>
         </li>
       </ul>
       <% }) %>
